<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ReviewActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="330dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="158dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="67dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="91dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="130dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="202dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="232dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="349dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="439dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="166dp" />


    <TextView
        android:id="@+id/contact_info_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contact_info_reviewActivity"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/first_name_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/last_name_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/last_name_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.1" />


    <TextView
        android:id="@+id/email_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:text="@string/email_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline4"
        tools:layout_editor_absoluteY="166dp" />

    <TextView
        android:id="@+id/comment_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comments_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline5"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/phone_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline4" />

    <EditText
        android:id="@+id/comment_reviewActivity_editText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_rectangle"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/comments_reviewActivity"
        android:importantForAutofill="no"
        android:inputType="phone"
        android:padding="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline8"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/review_reviewActivity_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="4dp"
        android:text="@string/review_reviewActivity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.966"
        app:layout_constraintStart_toEndOf="@+id/rating_bar"
        app:layout_constraintTop_toBottomOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/send_reviewActivity_button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:background="@drawable/black_rectangle"
        android:text="@string/send_reviewActivity"
        android:textColor="@color/white_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline9"
        app:layout_constraintVertical_bias="0.206" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="162dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/first_name_reviewActivity"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="148dp"
        android:layout_height="34dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/back_border"
        android:ellipsize="end"
        android:gravity="right"
        android:hint="@string/last_name_reviewActivity"
        android:inputType="textPersonName"
        android:padding="5dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline1"
        app:layout_constraintHorizontal_bias="0.842"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.653" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="158dp"
        android:layout_height="34dp"
        android:background="@drawable/back_border"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.512" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="150dp"
        android:layout_height="33dp"
        android:layout_marginStart="29dp"
        android:background="@drawable/back_border"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/guideline1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline10" />

    <RatingBar
        android:id="@+id/rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:numStars="5"
        android:stepSize="1.0"
        android:rating="1.0"
        android:isIndicator="false"
        android:progressTint="@color/yellow_color"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.578" />
</androidx.constraintlayout.widget.ConstraintLayout>